--- a/stm32f103_reg_library12_1_usart_dma_ringbuffer/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
+++ b/stm32f103_reg_library12_1_usart_dma_ringbuffer/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
@@ -26,23 +26,11 @@ Project File Date:  04/29/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'stm32f103zet6'
-compiling stm32f1xx_ll_exti.c...
-compiling stm32f1xx_it.c...
-compiling stm32f1xx_ll_pwr.c...
-compiling stm32f1xx_ll_gpio.c...
+Build target 'stm32f103zet6'
 compiling main.c...
-assembling startup_stm32f103xe.s...
-compiling gpio.c...
-compiling system_stm32f1xx.c...
-compiling stm32f1xx_ll_utils.c...
-compiling lwrb_ex.c...
-compiling stm32f1xx_ll_rcc.c...
-compiling lwrb.c...
 compiling myUsartDrive_reg.c...
-compiling myCanDrive_reg.c...
 linking...
-Program Size: Code=4496 RO-data=336 RW-data=4 ZI-data=7324  
+Program Size: Code=4288 RO-data=336 RW-data=4 ZI-data=7324  
 FromELF: creating hex file...
 "stm32f103zet6\stm32f103zet6.axf" - 0 Error(s), 0 Warning(s).
 
